--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ts-npm-module": "^1.0.5"
   },
   "devDependencies": {
-    "@types/peer-dial": "0.0.0"
+    "@types/peer-dial": "0.0.0",
+    "tslint": "^5.8.0"
   }
 }
