--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -18,7 +18,7 @@
             "type": "node",
             "request": "launch",
             "name": "Launch Server",
-            "program": "${workspaceFolder}\\out\\index.js",
+            "program": "${workspaceFolder}\\out\\src\\index.js",
             "sourceMaps": true,
             "outFiles": [
                 "${workspaceFolder}/**/*.js"
